# revenuecat-python

./: .gitignore  LICENSE  README.md  pyproject.toml
openapi/: README.md  openapi-python-client-v1.yaml  openapi-python-client-v2.yaml  revenuecat-v1.yaml
scripts/: download_openapi.sh  regenerate.sh
src/revenuecat/: __init__.py  _factory.py
src/revenuecat/v1/: __init__.py
src/revenuecat/v2/: __init__.py
src/revenuecat_v1/: __init__.py
src/revenuecat_v1/models/: __init__.py  defer_a_google_subscription_body.py  delete_subscriber_response_200.py  error.py  extend_an_apple_subscription_body.py  get_offerings_response_403.py  grant_a_promotional_entitlement_body.py  grant_a_promotional_entitlement_body_duration.py  offerings.py  offerings_offerings_item.py  offerings_offerings_item_packages_item.py  receipts_body.py  receipts_body_attributes.py  receipts_body_attributes_additional_property.py  subscriber.py  subscriber_subscriber.py  subscriber_subscriber_entitlements.py  subscriber_subscriber_entitlements_additional_property.py  subscriber_subscriber_non_subscriptions.py  subscriber_subscriber_non_subscriptions_additional_property_item.py  subscriber_subscriber_non_subscriptions_additional_property_item_price.py  subscriber_subscriber_other_purchases.py  subscriber_subscriber_subscriber_attributes.py  subscriber_subscriber_subscriber_attributes_additional_property.py  subscriber_subscriber_subscriptions.py  subscriber_subscriber_subscriptions_additional_property.py  subscribersattribution_body.py  (+10 more)
tests/: test_authenticated_client.py  test_factory.py
(+1573 files in other folders)
