[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "revenuecat"
version = "0.1.0"
description = "Modern Python client for RevenueCat APIs (v1 and v2)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "RevenueCat Python Client Contributors" }]
dependencies = [
  "attrs>=23.2.0",
  "httpx>=0.27.0",
  "python-dateutil>=2.8.2",
  'typing-extensions>=4.8.0; python_version < "3.11"',
]

[project.urls]
Homepage = "https://www.revenuecat.com/"
Documentation = "https://www.revenuecat.com/docs/"

[tool.hatch.build.targets.wheel]
packages = ["src/revenuecat", "src/revenuecat_v1", "src/revenuecat_v2"]

[dependency-groups]
dev = ["openapi-python-client>=0.27.0", "pyright>=1.1.350", "pytest>=7.4.0", "ruff>=0.5.7"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["src/revenuecat_v1", "src/revenuecat_v2"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["src/revenuecat_v1", "src/revenuecat_v2", "**/__pycache__"]
